--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -24,7 +24,7 @@ The web interface of \diva is based on OpenLayer (\url{http://openlayers.org/}) 
 	\parbox{.5\textwidth}{
 		\includegraphics[width=.475\textwidth]{diva_on_web_paper1}
 		}\parbox{.5\textwidth}{
-		\caption{.\label{fig:diva_on_web_paper1}}
+		\caption{Communications between the server and the client for analysis with \diva-on-web.\label{fig:diva_on_web_paper1}}
 		}
 \end{figure}
 
