--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -627,6 +627,20 @@
   timestamp = {2009.06.23}
 }
 
+@ARTICLE{SAUNDERS81,
+  author = {P. M. Saunders},
+  title = {Practical conversion of pressure to depth},
+  journal = jpo,
+  year = {1981},
+  volume = {11},
+  pages = {573-574},
+  number = {4},
+  doi = {10.1175/1520-0485(1981)011<0573:PCOPTD>2.0.CO;2},
+  owner = {Charles},
+  timestamp = {2008.11.12},
+  url = {http://journals.ametsoc.org/doi/abs/10.1175/1520-0485%281981%29011%3C0573%3APCOPTD%3E2.0.CO%3B2}
+}
+
 @TECHREPORT{SCHLITZER12,
   author = {R. Schlitzer},
   title = {Ocean Data View User's Guide (Version 4.5.0)},
