--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -1,13 +1,13 @@
 \chapter{Climatologies production: \diva 4D\label{chap:diva4D}}
 
-\diva  can be used to produce climatologies for a given variable in an oceanic basin. In this case \diva 3D tools are used to produce for successive climatological time periods, 3D climatological analyses on the basin. The resulting climatologies are gathered in 4D binary files GHER format and NetCDF.
+\diva can be used to produce climatologies for a given variable in an oceanic basin. In this case \diva 3D tools are used to produce for successive climatological time periods, 3D climatological analyses on the basin. The resulting climatologies are gathered in 4D binary files GHER format and NetCDF.
 
-The working directory to performs 4D-analyses is : \underline{\directory{GODIVA\_2013/JRAx/Climatology}}.
+The working directory to performs 4D-analyses is: \directory{GODIVA\_2013/JRAx/Climatology}.
 
 \minitoc
 
 
-\section{CLimatology definition}
+\section{Climatology definition}
 
 The Climatologies to be produced are first defined by the mean of three files:
 
@@ -82,11 +82,12 @@ Salinity
 }
 \end{center}
 
-\section{\diva 4D Climatology performence}
+\section{\diva 4D Climatology performance}
+%-----------------------------------------
 
-All  \diva\ shell scripts files for climatologies (or 4D-analyses) production are located in \par \directory{GODIVA\_2013/JRAx/Climatology}. This directory has its proper subdirectories \directory{input} where input data and files are placed, and \directory{output} where \diva\ outputs are stored.
+All \diva shell scripts files for climatologies (or 4D-analyses) production are located in \par \directory{GODIVA\_2013/JRAx/Climatology}. This directory has its proper subdirectories \directory{input} where input data and files are placed, and \directory{output} where \diva outputs are stored.
 
-The main shell script file for climatologies performence is \file{divadoall}. The actions that one can perfom when running \file{divadoall} are:
+The main shell script file for climatologies performance is \command{divadoall}. The actions that one can perform when running \command{divadoall} are:
 
 \subsection{Actions performed by \file{divadoall} }
 
@@ -107,14 +108,11 @@ The main shell script file for climatologies performence is \file{divadoall}. Th
 \item analysis using ``advection'' constraint,
 \item analysis with data transformation,
 \item analysis using reference fields for each level calculated on bases of mixed data from three  neighbouring levels,
-\item analysis using a ``filtered'' mean backgoung field: all levels mean are first calculated an vertically filtered before being used  3D analyses.
+\item analysis using a ``filtered'' mean background field: all levels mean are first calculated an vertically filtered before being used  3D analyses.
 \end{itemize}
 \item Gnuplot plots production.
 \item Performances of analysis using data detrending method.
 \end{itemize}
-
-
-
 
 \centerline{
 \begin{tabular}{|l|}
@@ -125,12 +123,11 @@ The main shell script file for climatologies performence is \file{divadoall}. Th
 \end{tabular}
 }
 
-
 {\bf Note:}
 \begin{itemize}
 \item[*] When data extraction is activated in the \file{driver}, the execution is made for all levels found in \file{contour.depth} file provided in the subdirectory \file{input}. It is also taking into account a minimum number of data in a layer with regard to the corresponding flag value given in \file{driver}.
 \item[*] When ``boundary lines and coastlines'' generation is activated in the \file{driver}, the execution is made for all levels found in \file{contour.depth} file provided in the subdirectory \directory{input}.
-\item[*] When parameters optimisation and/or analysis is activated, the execution is made for the levels between the values choosen for the lower and upper level numbers and takes into account the bound values (maximum and minimum) prescribed in the \file{driver}.
+\item[*] When parameters optimisation and/or analysis is activated, the execution is made for the levels between the values chosen for the lower and upper level numbers and takes into account the bound values (maximum and minimum) prescribed in the \file{driver}.
 \end{itemize}
 
 
@@ -156,9 +153,10 @@ The main shell script file for climatologies performence is \file{divadoall}. Th
 }
 
 \section{Input data preparation}
+%-------------------------------
+
 
 \subsection{Inputs for input data preparation actions}
-
 
 In \diva 4D (or Climatology production) we can use all the tools provided in \diva 3D for input data preparation.
 Input data preparation consists in the following actions:
@@ -166,7 +164,7 @@ Input data preparation consists in the following actions:
 \vspace{-0.5cm}
 
 \begin{itemize}
-\item Data set foles extraction.
+\item Data set for extraction.
 \item Boundary lines and coastlines generation and  ``Advection'' field generation.
 \item Data cleaning on mesh, outliers elimination from data sets and generation of Relative Length fields.
 \item Parameters optimisation and reference fields generation.
@@ -174,7 +172,7 @@ Input data preparation consists in the following actions:
 
 %\vspace{-0.5cm}
 
-To performe an action, one has to configure the \file{driver} file and give in the corresponding flag values and run the \file{divadoall} files script. For each action, a specific inputs are needed:
+To perform an action, one has to configure the \file{driver} file and give in the corresponding flag values and run the \command{divadoall} files script. For each action, a specific inputs are needed:
 
 
 %\vspace{1.5cm}
@@ -227,7 +225,7 @@ generation       &  of the considered depths and time periods {\directory{divapa
 
 \subsection{Outputs of input data preparation actions}
 
-Outputs resulting from a \file{divadoall} run for input data preparation actions are placed in the \directory{input} for data sets extraction and in a \directory{newinput} subdirectory for the other actions as chown in the following table:
+Outputs resulting from a \command{divadoall} run for input data preparation actions are placed in the \directory{input} for data sets extraction and in a \directory{newinput} subdirectory for the other actions as shown in the following table:
 
 \vspace{0.5cm}
 
@@ -244,7 +242,7 @@ Data extraction  & A subdirectory {\directory{divadata}} is created in \\
 \hline
     &   \\
  Coastlines generation &  A {\directory{newinput}} subdirectory which contains:\\
- and ``Advection''     &  a subdirectory \directory{divaparam} with the ``{\file{coast.cont.$100xx$}}'' \\
+ and ``Advection''     &  a subdirectory \directory{divaparam} with the {\file{coast.cont.$100xx$}} \\
   field generation     & and  a subdirectory \directory{divaUVcons\_all} containing the\\
                        & velocity field files \\
     &   \\
@@ -259,7 +257,7 @@ generation of relative &  relative length files if generated. \\
 \hline
     &   \\
 Parameters optimisation & A {\directory{newinput/divaparam}} subdirectory which contains \\
- ($L$ and $S/N$)        & \file {\tt param.par.var.$100xx$} files and summary files of the \\
+ ($L$ and $S/N$)        & \file{param.par.var.$100xx$} files and summary files of the \\
                         & optimisation and filtering procedure.\\
     &   \\
 \hline
@@ -274,23 +272,24 @@ generation       & all generated reference fields \\
 
 \vspace{0.5cm}
 
-\underline{\bf The sell script file \file{divadocommit}}: In order to be able to use the outputs of input data preparation actions, they must be copied to the \directory{input} directoty. This can be done by runnig the sell script file \file{divadocommit}. 
+
+The sell script file \command{divadocommit}: in order to be able to use the outputs of input data preparation actions, they must be copied to the \directory{input} directory. This can be done by running the sell script file \command{divadocommit}. 
 
 \vspace{0.5cm}
 {\bf Note:} \\
 \centerline{
 \begin{tabular}{|l|}
 \hline
-\file{divadocommit} replaces input files in \directory{input} directory by the ones \\
- found in   \directory{newinput} directory assuming that the \file{driver}, \file{varlist},\\
-  \file{yearlist} and \file{monthlist} files are the ones used by \file{divadoall}\\
-  to creat the \directory{newinput} subdirectory on which  \file{divadocommit} is run.\\
+\command{divadocommit} replaces input files in \directory{input} directory by the ones \\
+found in \directory{newinput} directory assuming that the \file{driver}, \file{varlist},\\
+\file{yearlist} and \file{monthlist} files are the ones used by \command{divadoall}\\
+to create the \directory{newinput} subdirectory on which  \command{divadocommit} is run.\\
 \hline
 \end{tabular}
 }
 \vspace{-0.4cm}
 \begin{itemize}
-\item[*] When reference fields are generated, they are copied by the script file \file{divadocommit} in a subdirectory \directory{input/divarefe\_all}.
+\item[*] When reference fields are generated, they are copied by the script file \command{divadocommit} in a subdirectory \directory{input/divarefe\_all}.
 \end{itemize}
 
 
@@ -341,7 +340,7 @@ number of groups for data detrending, 0 if no detrending.
 
 \section{Production of Climatologies}
 
-\diva 4D allows the production of climatologies based on simple \diva\ data analysis or based on \diva\ analysis using different option as in \diva\ 3D:
+\diva 4D allows the production of climatologies based on simple \diva data analysis or based on \diva analysis using different option as in \diva\ 3D:
 
 \begin{itemize}
 \item relative length files
@@ -354,21 +353,20 @@ number of groups for data detrending, 0 if no detrending.
 \vspace{-0.5cm}
 
 
-{\bf Note:} These options are automatically acctivated when the appropriat input data are provided.
+{\bf Note:} These options are automatically activated when the appropriate input data are provided.
 
-
- More options available in \diva\ 4D are:
+More options available in \diva 4D are:
 
 \begin{itemize}
-\item analyses using vertically filtered mean bckgroung
-\item analyses with data transformation:  $\log$(data)-$\exp$(analysis), and anamorphosis transformations or user defined transfomation
+\item analysis using vertically filtered mean background
+\item analysis with data transformation:  $\log$(data)-$\exp$(analysis), and anamorphosis transformations or user defined transformation
 \item analysis using  a reference field for each layer generated on the basis of all data from the two neighbouring layers in addition to the layer data set.
 \end{itemize}
 
 
 \vspace{-0.5cm}
 
-{\bf Note:} These options are acctivated with a specific falg values in the \file{driver}.
+{\bf Note:} These options are activated with a specific flag values in the \file{driver}.
 
 
 \subsection{ Inputs for climatologies production}
@@ -384,8 +382,8 @@ number of groups for data detrending, 0 if no detrending.
 \file{yearlist}  & input files defining the climatology \\
 \file{monthlist} & \\
 \hline 
-\file{constandrefe} & input file to acctivate advection \\
-                    & constraint and/or reference fileds \\
+\file{constandrefe} & input file to activate advection \\
+                    & constraint and/or reference fields \\
 \hline 
 \end{tabular}
 }
@@ -402,14 +400,14 @@ number of groups for data detrending, 0 if no detrending.
 \file{contour.depth}  & file of depth values (see example \ref{contdepthfile}) \\
 \file{param.par}      & file defining the analysis parameters, provided here \\
                       & if not present in \directory{divaparam} \\
-\file{NCDFinfo}       & Info file containing metadata for NetCDF files (see exaple \ref{NCDFinfoexp})\\
+\file{NCDFinfo}       & Info file containing metadata for NetCDF files (see example \ref{NCDFinfoexp})\\
 \hline
  \directory{divaparam}     & subdirectory containing coastline files \file{coast.cont.$100xx$}\\
                            & and parameters files \file{param.par.var.$100xx$} \\
  \directory{divadata}      &  subdirectory containing data set files \\
                            & \file{var.yyyyzzzz.mmnn.$100xx$}\\
- \directory{divarefe\_all} & subdirectory containing reference field files (see section \ref{divarefeuse}) \\
- \directory{divaUVcons\_all} & subdirectory containing advection constraint fields (see section \ref{advconstuse}
+ \directory{divarefe\_all} & subdirectory containing reference field files (see Section~\ref{divarefeuse}) \\
+ \directory{divaUVcons\_all} & subdirectory containing advection constraint fields (see Section~\ref{advconstuse}
 )\\
 \hline
 \end{tabular}
@@ -428,7 +426,7 @@ number of groups for data detrending, 0 if no detrending.
 'months since since xxxx-01-01'
  Time value (if not climatological data)
 1200
- Cell_methode string:
+ Cell_method string:
 'time: mean (this month data from all years)'
  Institution name: where the dataset was produced.
 'University of Liege, AGO, GHER'
@@ -437,8 +435,8 @@ number of groups for data detrending, 0 if no detrending.
  Source (observation, radiosonde, database, model-generated data,...)
 ' data_from various sources'
 Comment
-'This is only for DIVA developpement and texting work'
-Autor e-mail adress (or contact person to report problems)
+'This is only for DIVA development and testing work'
+Author e-mail address (or contact person to report problems)
 'm.ouberdous@ulg.ac.be'
 
 \end{verbatim}
@@ -453,7 +451,7 @@ Autor e-mail adress (or contact person to report problems)
 \subsection{Advection constraint and reference field files}
 
 
-To perform \diva 4D analyses with  ``advection''  constraint  and/or using reference fields, the advection constraint and reference field files must be provided in the corresponding subdirectory  \directory{divarefe\_all} and  \directory{divaUVcon\_all} in \directory{input} directory (see sections  \ref{divarefeuse} and \ref{advconstuse}).
+To perform \diva 4D analyses with advection constraint and/or using reference fields, the advection constraint and reference field files must be provided in the corresponding subdirectory  \directory{divarefe\_all} and \directory{divaUVcon\_all} in \directory{input} directory (see Sections~\ref{divarefeuse} and \ref{advconstuse}).
 
 
 {\bf Note:} 
@@ -476,9 +474,9 @@ To perform \diva 4D analyses with  ``advection''  constraint  and/or using refer
 
 \subsubsection{Using advection constraint and/or reference field }
 
- The advection constraint and/or reference fields usage actions are acctivated by the corresponding flag values in \file{constandrefe} file (see example \ref{expconsreff}).
-The advection constraint option is acctivated when the corresponding flag value is equal to $1$. 
-The use of reference fields option is acctivated when the corresponding flag value is equal to $1$, in this case a year period  and month period codes must be provided in the corresponding lines.
+The advection constraint and/or reference fields usage actions are activated by the corresponding flag values in \file{constandrefe} file (see example \ref{expconsreff}).
+The advection constraint option is activated when the corresponding flag value is equal to $1$. 
+The use of reference fields option is activated when the corresponding flag value is equal to $1$, in this case a year period  and month period codes must be provided in the corresponding lines.
 
 
 \begin{center}
@@ -509,7 +507,7 @@ The use of reference fields option is acctivated when the corresponding flag val
 
 \subsection{\diva\ 4D climatology production output}
 
-The outputs are placed in \directory{output/3Danalysis/} and are the same as of the \diva\ 3D, in addition to the climatologies 4D-NetCDF files:
+The outputs are placed in \directory{output/3Danalysis/} and are the same as of the \diva 3D, in addition to the climatologies 4D-NetCDF files:
 
 \begin{description}
 
@@ -594,11 +592,13 @@ All actions performed by \file{divadoall} are prescribed in the file \file{drive
 
 
 \begin{itemize}
-\item {\bf Data extraction}: Possible flag values: $0$,$1$,$-1$ and $-10$. If you activate the data extraction (flag value $\neq 0$) in the {\tt driver} file, the execution of {\tt divadoall} will run the {\tt divaselectorODV4} automatically, including interpolation to the levels specified in {\tt contour.depth}. Data will be extracted from the ODV spreadsheat file(s) specified in {\tt datasource}. {\tt divaselectorODV4} will recognises if the data export to ODV file was done with depths in ``meters'' or it was done with pressure (in dbar) vertical coordinate, you can either choose to map it as if they were meters or apply the Saunders correction. Choose flag $=-1$ to use pressure coordinate and assume they are meters, and flag value $=-10$ to use pressure coordinates and transform to meters by using the Saunders approach.\par
- If there is a {\tt qflist} file, the selection with {\tt divaselectorODV4} will only use those measurements for which the quality flag is one of those found in the file {\tt qflist}. In the absence of {\tt qflist}, no quality flag analysis is done and all data taken.\par
+\item {\bf Data extraction}: Possible flag values: $0$,$1$,$-1$ and $-10$. If you activate the data extraction (flag value $\neq 0$) in the \file{driver} file, the execution of \command{divadoall} will run the \command{divaselectorODV4} automatically, including interpolation to the levels specified in {\tt contour.depth}. Data will be extracted from the ODV spreadsheat file(s) specified in \file{datasource}. Command \command{divaselectorODV4} will recognises if the data export to ODV file was done with depths (in meters) or it was done with pressure (in dbar) vertical coordinate, you can either choose to map it as if they were meters or apply the \citet{SAUNDERS81} correction. Choose flag $=-1$ to use pressure coordinate and assume they are meters, and flag value $=-10$ to use pressure coordinates and transform to meters by using the Saunders approach.
+
+If there is a \file{qflist} file, the selection with \file{divaselectorODV4} will only use those measurements for which the quality flag is one of those found in the file \file{qflist}. In the absence of \file{qflist}, no quality flag analysis is done and all data taken.
+
 {\bf Note:} you can specify several ODV4 spreadsheet files as input files, one file name (or full path) per line in \file{datasource} file, {\it they must have the same variables naming convention, depth coordinates and quality flags conventions}.
 
-\item {\bf Boundary lines and coastlines generation}: Possible flag values are $0$, $1$,  $2$ and  $3$. When this action is activated (flag $\geq 1$), you must provide in the {\tt input} directory the files {\tt TopoInfo.dat} and  {\tt topo.grd} in addition to {\tt contour.depth} file.
+\item {\bf Boundary lines and coastlines generation}: Possible flag values are $0$, $1$, $2$ and $3$. When this action is activated (flag $\geq 1$), you must provide in the \directory{input} directory the files \file{TopoInfo.dat} and  \file{topo.grd} in addition to {\tt contour.depth} file.
               \begin{itemize}
                 \item[*] $=1$ if contour files are to be generated,
                 \item[*] $=2$ if advection constraint (Anisotropic correlation along topography) files are to be generated from  \texttt{topo.grd},
@@ -635,17 +635,17 @@ All actions performed by \file{divadoall} are prescribed in the file \file{drive
   \begin{itemize}
   \item  {\bf Perform analysis}: Possible flag values are $1$, $10$, $11$, $12$, $13$ and $14$:
               \begin{itemize}
-                \item[*] $=1$ if analysis fields of the given variable are to be performed for all the layers between $L_1$ and $L_2$ which are the flag values for {\it lowerlevel number} and {\it upperlevel number} in the {\tt driver}.
+                \item[*] $=1$ if analysis fields of the given variable are to be performed for all the layers between $L_1$ and $L_2$ which are the flag values for lower level number and upper level number in the \file{driver}.
                 \item[*] $=11$ if analysis fields of the given variable are to be performed with $\exp$(data)-$\log$(analysis) transformation
                 \item[*] $=13$ if analysis fields of the given variable are to be performed with anamorphosis transformation
-                \item[*] $=14$ if analysis fields of the given variable are to be performed with user choosen transformation function.
+                \item[*] $=14$ if analysis fields of the given variable are to be performed with user chosen transformation function.
               \end{itemize}
    \item  {\bf Perform reference fields}: Possible flag values are $2$, $20$, $21$, $22$, $23$ and $24$:
               \begin{itemize}
-                \item[*] $=2$ if semi normed reference fields of the given variables (prescribed in {\tt varlist} and for time periods described in {\tt yearlist} and {\tt monthlist}) are to be performed for all the layers between $L_1$ and $L_2$, which are the flag values for {\it lowerlevel number} and {\it upperlevel number} in the {\tt driver}.
+                \item[*] $=2$ if semi normed reference fields of the given variables (prescribed in \file{varlist} and for time periods described in \file{yearlist} and \file{monthlist}) are to be performed for all the layers between $L_1$ and $L_2$, which are the flag values for lower level number and upper level number in the \file{driver}.
                 \item[*] $=21$ if analysis fields of the given variable are to be performed with $\log$(data)-$\exp$(analysis) transformation
                 \item[*] $=23$ if reference fields of the given variable are to be performed with anamorphosis transformation
-                \item[*] $=24$ if reference fields of the given variable are to be performed with user choosen transformation function.
+                \item[*] $=24$ if reference fields of the given variable are to be performed with user chosen transformation function.
               \end{itemize}
   \item  {\bf Adding $100$ to the flag value}:
               \begin{itemize}
@@ -656,15 +656,16 @@ All actions performed by \file{divadoall} are prescribed in the file \file{drive
 \item {\bf Gnuplot plots}: Possible flag values are $0$ and $1$. Activate this action for a quick visualization (and assessment) of the climatology production, {\tt gnuplot} executions can be included in the production process.\par 
 There are a few controls you can apply for these gnuplot plots:
 \begin{itemize}
-\item[*] {\tt VAR.bounds}: contains the lower and upper bounds during the plotting for the variable {\tt VAR} (which is one of the variable names found in {\tt varlist}) 
-\item[*] {\tt VAR.pal}: contains the color palette for the same variable.
-\item[*] {\tt plotboundingbox.dat}: contains the box for plotting. This is typically used to plot only the region of interest, without overlapping regions with other climatologies (the numerical fields include the overlapping regions, only the plotting is limited with the {\tt plotboundingbox.dat} file).
+\item[*] \file{VAR.bounds}: contains the lower and upper bounds during the plotting for the variable {\tt VAR} (which is one of the variable names found in {\tt varlist}) 
+\item[*] \file{VAR.pal}: contains the color palette for the same variable.
+\item[*] \file{plotboundingbox.dat}: contains the box for plotting. This is typically used to plot only the region of interest, without overlapping regions with other climatologies (the numerical fields include the overlapping regions, only the plotting is limited with the {\tt plotboundingbox.dat} file).
 \end{itemize}
-{\bf Note}: the gnuplot colorbars use a scale that is actually remapped to the bounds found in {\tt VAR.bound}. Exemple:
-if your colorbar definition goes from 0 to 10 and the {\tt VAR} bounds are from 0 and 100, a value of 50 in the variable analyzed will use the color found in the colorbar definition at value 5. To help you designing a specially adapted colorbar lets say for salinity, it is therefore a good idea to define the colorbar with the same bounds as those in {\tt VAR.bounds}.\par
-{\bf Note}: for adapting the color palette, file {\tt gnuplotcolornames} contains a list of preexisting colors and their hexadecimal codes you can use instead of names.
+{\bf Note}: the gnuplot colorbars use a scale that is actually remapped to the bounds found in {\tt VAR.bound}. Example:
+if your colorbar definition goes from 0 to 10 and the {\tt VAR} bounds are from 0 and 100, a value of 50 in the variable analysed will use the color found in the colorbar definition at value 5. To help you designing a specially adapted color bar lets say for salinity, it is therefore a good idea to define the colorbar with the same bounds as those in \file{VAR.bounds}.
+
+{\bf Note}: for adapting the color palette, file \file{gnuplotcolornames} contains a list of pre-existing colors and their hexadecimal codes you can use instead of names.
 
 \item {\bf Detrending} Possible flag values are $0$ and $n$: the action is activated when choosing flag value an integer $n$ $>0$. The chosen value $n$ must be equal or smaller to groups number in data files.\par
-{\bf Note}: If you use {\tt divadoall} (or {\tt divaselectorODV4}) to extract data and create data input files, columns 5, 6 ,7 and 8 contain respectively groups years, month, days and hours (1 for the first year in the selection etc).
+{\bf Note}: If you use \command{divadoall} (or \command{divaselectorODV4}) to extract data and create data input files, columns 5, 6 ,7 and 8 contain respectively groups years, month, days and hours (1 for the first year in the selection etc).
 \end{itemize}
 
